Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">StarsCount</h1>
-      <h2 class="project-tagline">the world of StarsCount by Programs</h2>
+      <h2 class="project-tagline">The World of StarsCount by Programs</h2>
     </section>
 
     <section class="main-content">
