--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>StarsCount by pipi2012</title>
+    <title>StarsCount</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -21,10 +21,10 @@
 
 <p>the world is buliding...</p>
 
+      <!--
       <footer class="site-footer">
-
       </footer>
-
+      -->
     </section>
 
   
