--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <section class="main-content">
       <h3>
 <a id="welcome-to-my-program-world" class="anchor" href="#welcome-to-my-program-world" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my program world!</h3>
-blog: <a href="http://blog.starscount.cn">blog.starscount.cn</a><br/>
-wiki: <a href="http://wiki.starscount.cn">wiki.starscount.cn</a><br/>
+BLOG:&nbsp;&nbsp; <a href="http://blog.starscount.cn">blog.starscount.cn</a><br/>
+WIKI:&nbsp;&nbsp; <a href="http://wiki.starscount.cn">wiki.starscount.cn</a><br/>
 <p>the world is buliding...</p>
 
       <!--
